--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "address": "^2.0.1",
     "mongoose": "^8.1.2",
     "next": "14.1.0",
     "react": "^18",
