--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "reservation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "address": "^2.0.1",
-    "mongoose": "^8.1.2",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
-  }
+	"name": "reservation",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev -p 2222",
+		"build": "next build",
+		"start": "next start -p 2749",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"address": "^2.0.1",
+		"mongoose": "^8.1.2",
+		"next": "^14.1.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^5.0.1",
+		"react-toastify": "^10.0.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"typescript": "^5"
+	}
 }
