--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # MONGO_URI = "mongodb+srv://alireza:uNeZjf5NFJrpN2MP@cluster0.vd3sffh.mongodb.net/shopron"
 MONGO_URI = "mongodb://localhost:27017/Reservation"
+NODE_ENV = 2749
 # MONGO_URIb = "mongodb://Assetron:A3etE*s@10.104.26.128:27017/Asset"
