--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-# MONGO_URI = "mongodb+srv://alireza:uNeZjf5NFJrpN2MP@cluster0.vd3sffh.mongodb.net/shopron"
 MONGO_URI = "mongodb://localhost:27017/Reservation"
- # MONGO_URIb = "mongodb://Assetron:A3etE*s@10.104.26.128:27017/Asset"
- Added the database "foodroon_Reservatio" with the username "foodroon_alirezasha"
+# MONGO_URI = "mongodb://foodroon_alirezasha:Alireza1380@localhost:27017/foodroon_Reservatio" 
